# rtpcore

./: LICENSE  README.md  pyproject.toml
app/: __init__.py  app.py  try.py
rtp/: __init__.py  __main__.py  handler.py  main.py  server.py
